Fix alignment errors in hero section

--- a/styles/style.css
+++ b/styles/style.css
@@ -73,8 +73,7 @@ body {
 .center-align-items {
     display: flex;
     align-items: center;
-    justify-content: center;
-    min-width: 150px;
+    max-width: 250px;
 }
 
 .bottom-align-items {
